Revert "moved the pictures and changed their links"

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -98,7 +98,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../spectral/images/memory-match-picture.JPG" alt="Memory Match Game Preview" /></div><div class="content">
+							<div class="image"><img src="images/pic01.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/memory-match-picture.JPG" alt="Memory Match Game Preview" /></div><div class="content">
 								<h2>Lion King Memory Match</h2>
 								<ul>
 									<li>HTML5</li>
@@ -113,7 +113,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../spectral/images/hslandingpage.JPG" alt="Holiday Sales Preview" /></div><div class="content">
+							<div class="image"><img src="images/pic02.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/hslandingpage.JPG" alt="Holiday Sales Preview" /></div><div class="content">
 								<h2>Holiday Sales</h2>
 								<ul>
 									<li>HTML5</li>
@@ -130,7 +130,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../spectral/images/provlandingpage.JPG" alt="Prov Preview" /></div><div class="content">
+							<div class="image"><img src="images/pic03.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../img/provlandingpage.JPG" alt="Prov Preview" /></div><div class="content">
 								<h2>Prov</h2>
 								<ul>
 									<li>HTML5</li>
