--- a/spectral/index.html
+++ b/spectral/index.html
@@ -64,8 +64,6 @@
 
 										<div class="imageMe"></div>
 									</div>
-
-										<!-- <img class="imageMe" src="../img/me.jpg"> -->
 										<p>
 											Hi, my name is Anjaleena Barclay. I am a developer based in Orange County, California. I have always been
 											interested in
@@ -98,7 +96,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../spectral/images/memory-match-picture.JPG" alt="Memory Match Game Preview" /></div><div class="content">
+							<div class="image"><img src="images/pic01.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="images/memory-match-picture.JPG" alt="Memory Match Game Preview" /></div><div class="content">
 								<h2>Lion King Memory Match</h2>
 								<ul>
 									<li>HTML5</li>
@@ -113,7 +111,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../spectral/images/hslandingpage.JPG" alt="Holiday Sales Preview" /></div><div class="content">
+							<div class="image"><img src="images/pic02.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="images/hslandingpage.JPG" alt="Holiday Sales Preview" /></div><div class="content">
 								<h2>Holiday Sales</h2>
 								<ul>
 									<li>HTML5</li>
@@ -130,7 +128,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="../spectral/images/provlandingpage.JPG" alt="Prov Preview" /></div><div class="content">
+							<div class="image"><img src="images/pic03.jpg" alt="" /><img class="project" style="width: 80%;height:55%;" src="images/provlandingpage.JPG" alt="Prov Preview" /></div><div class="content">
 								<h2>Prov</h2>
 								<ul>
 									<li>HTML5</li>
