added target = _blank to my a tags

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -104,9 +104,9 @@
 									<li>jQuery</li>
 								</ul>
 								<div>
-									<a href="https://lionkingmemorymatch.anjaleenab.com/">Live Site</a>
+									<a href="https://lionkingmemorymatch.anjaleenab.com/" target="_blank">Live Site</a>
 									<br />
-									<a href="https://github.com/anjaleenab/Lion-King-Memory-Match">Source Code</a>
+									<a href="https://github.com/anjaleenab/Lion-King-Memory-Match" target="_blank">Source Code</a>
 								</div>
 							</div>
 						</section>
@@ -121,9 +121,9 @@
 									<li>MYSQL</li>
 								</ul>
 								<div>
-									<a href="https://holidaysales.anjaleenab.com">Live Site</a>
+									<a href="https://holidaysales.anjaleenab.com" target="_blank">Live Site</a>
 									<br />
-									<a href="https://github.com/anjaleenab/holiday-sales">Source Code</a>
+									<a href="https://github.com/anjaleenab/holiday-sales" target="_blank">Source Code</a>
 								</div>
 							</div>
 						</section>
@@ -138,9 +138,9 @@
 									<li>MYSQL</li>
 								</ul>
 								<div>
-									<a href="https://prov.anjaleenab.com">Live Site</a>
+									<a href="https://prov.anjaleenab.com" target="_blank">Live Site</a>
 									<br />
-									<a href="https://github.com/anjaleenab/LessonPlanSharer">Source Code</a>
+									<a href="https://github.com/anjaleenab/LessonPlanSharer" target="_blank">Source Code</a>
 								</div>
 							</div>
 						</section>
@@ -206,12 +206,12 @@
 					<footer id="footer">
 						<h1>Connect With Me</h1>
 			<div class="links d-flex justify-content-center">
-						<span><a href="mailto:anjaleenabarclay@aol.com" target="blank">anjaleenabarclay@aol.com</a></span>
+						<span><a href="mailto:anjaleenabarclay@aol.com" target="_blank">anjaleenabarclay@aol.com</a></span>
 						<ul class="icons">
-							<li><a style="font-size: calc(25px + 9vmin);" href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/" target="blank" class="icon fab fa-linkedin"><span class="label">Twitter</span></a></li>
-							<li><a style="font-size: calc(25px + 9vmin);" href="https://github.com/anjaleenab" target="blank" class="icon fa-github"><span class="label">Facebook</span></a></li>
-							<li><a style="font-size: calc(25px + 9vmin);" href="mailto:anjaleenabarclay@aol.com" target="blank" class="icon fas fa-envelope"><span class="label">Instagram</span></a></li>
-							<li><a style="font-size: calc(25px + 9vmin);" href="https://drive.google.com/open?id=1uInPTP7uVRZX6xjLZ6AnYx94qfrv7Ldr" target="blank" class="icon fas fa-file"><span class="label">Instagram</span></a></li>
+							<li><a style="font-size: calc(25px + 9vmin);" href="https://www.linkedin.com/in/anjaleena-barclay-74263b139/" target="_blank" class="icon fab fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a style="font-size: calc(25px + 9vmin);" href="https://github.com/anjaleenab" target="_blank" class="icon fa-github"><span class="label">Facebook</span></a></li>
+							<li><a style="font-size: calc(25px + 9vmin);" href="mailto:anjaleenabarclay@aol.com" target="_blank" class="icon fas fa-envelope"><span class="label">Instagram</span></a></li>
+							<li><a style="font-size: calc(25px + 9vmin);" href="https://drive.google.com/open?id=1uInPTP7uVRZX6xjLZ6AnYx94qfrv7Ldr" target="_blank" class="icon fas fa-file"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
