added bootstrap to the project descriptions

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -117,6 +117,7 @@
 									<li>HTML5</li>
 									<li>CSS3</li>
 									<li>React</li>
+									<li>BootStrap</li>
 									<li>PHP</li>
 									<li>MYSQL</li>
 								</ul>
@@ -134,6 +135,7 @@
 									<li>HTML5</li>
 									<li>CSS3</li>
 									<li>React</li>
+									<li>BootStrap</li>
 									<li>PHP</li>
 									<li>MYSQL</li>
 								</ul>
