changed my about me

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -64,27 +64,11 @@
 
 										<div class="imageMe"></div>
 									</div>
+									<br>
 										<p>
-											Hi, my name is Anjaleena Barclay. I am a developer based in Orange County, California. I have always been
-											interested in
-											the way things work. In May of 2019, I graduated from Cal State University of Fullerton with a double major in
-											business administration with a concentration in Information Systems and psychology.
-
-											In my information systems courses, I had the opportunity to learn how the foundation of information systems work.
-											This
-											included learning about the internet, databases and the software development life cycle. I had the opportunity to
-											shadow
-											an information technology department. During this time, I realized just how much learning I would get to do with a
-											career in information systems. I decided that I would be most interested in learning about and being a part of the
-											software development process.
-
-											I decided to attend an advanced full-stack web development program called LearningFuze. Through 12+ hour coding
-											days at
-											LearningFuze, I was able to take a closer look at the software development life cycle and learn new skills such as
-											JavaScript, HTML, CSS. My experience at LearningFuze was amazing. Every day I felt excited to challenge myself,
-											learn
-											and create. I am excited to continue learning, growing and developing. I am open to any opportunities related to
-											web and project development. Please feel free to connect with me.
+											Hi, my name is Anjaleena Barclay. I am based in Orange County, California. I am a recent California State University of
+											Fullerton alumni who loves debugging and has a passion for the web development process. I am open to both web
+											development and application support roles. Please feel free to reach out to me with any questions that you may have!
 										</p>
 								</div>
 
