edited about me

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -67,8 +67,8 @@
 									<br>
 										<p>
 											Hi, my name is Anjaleena Barclay. I am based in Orange County, California. I am a recent California State University of
-											Fullerton alumni who loves debugging and has a passion for the web development process. I am open to both web
-											development and application support roles. Please feel free to reach out to me with any questions that you may have!
+											Fullerton alumni who loves solving problems and has a passion for web development. I am open to both application support
+											and web development roles. Please feel free to reach out to me with any questions that you may have!
 										</p>
 								</div>
 
